--- a/package_test.ipynb
+++ b/package_test.ipynb
@@ -953,7 +953,7 @@
         "id": "3StpWRfE68NU"
       },
       "source": [
-        "# **use costume Conv net as input embding layer**"
+        "# **use costum Conv net as input embedding layer**"
       ]
     },
     {
